styles/globals.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

:root {
  --black: rgb(0, 0, 0);
  --black10: #181818;
  --black20: rgba(0, 0, 0, 0.6);
  --black30: rgb(17, 24, 39);
  --black40: #141414;
  --black50: rgb(20, 20, 20);

  --gray10: rgb(119, 119, 119);
  --gray40: rgba(42, 42, 42, 0.6);

  --white10: rgba(255, 255, 255, 1);
  --white20: rgba(243, 244, 246, 1);
  --white30: rgb(209, 213, 219);

  --green10: rgba(110, 231, 183, 1);
  --green30: rgb(55, 215, 116);
  --shadow10: rgba(0, 0, 0, 0.3);
  --shadow20: rgba(158, 155, 155, 0.3);
  --shadow30: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
    0 10px 10px -5px rgba(0, 0, 0, 0.04);

  --red: rgb(220, 38, 38);
  --red10: rgba(185, 28, 28, 1);

  --blue: rgba(75, 85, 99, 1);
  --blue20: rgb(55, 65, 81);
  scrollbar-width: none;
  
}



html,
body {
  overflow-x: hidden;
  font-family: "Roboto Slab",serif;
  background-color: var(--black40);
  color: #ebebeb;
}


a {
  color: inherit;
  text-decoration: none;
}
p{
  font-weight:500;
}
h1 {
  font-weight: 800;
}

h2 {
  font-weight: 700;
}

h3 {
  font-weight: 600;
}
 

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

